# etl_template

{{ cookiecutter.slug }}/: config.toml  load_{{ cookiecutter.slug }}.py  pyproject.toml
